# gmo-coin-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  rust.yml  test.yml
examples/: status.rs
examples/private/: active_orders.rs  assets.rs  cancel_bulk_order.rs  cancel_order.rs  cancel_orders.rs  change_losscut_price.rs  change_order.rs  close_bulk_order.rs  close_order.rs  executions.rs  latest_executions.rs  limit_order.rs  margin.rs  market_order.rs  open_positions.rs  orders.rs  position_summary.rs  stop_order.rs
examples/public/: orderbooks.rs  status.rs  ticker.rs  trades.rs
src/: dto.rs  end_point.rs  error.rs  execution_type.rs  headers.rs  http_client.rs  json.rs  lib.rs  private.rs  public.rs  response.rs  secret.rs  settle_type.rs  side.rs  symbol.rs  time_in_force.rs  timestamp.rs
src/private/: active_orders.rs  assets.rs  cancel_bulk_order.rs  cancel_order.rs  cancel_orders.rs  change_losscut_price.rs  change_order.rs  close_bulk_order.rs  close_order.rs  executions.rs  latest_executions.rs  margin.rs  open_positions.rs  order.rs  orders.rs  position_summary.rs
src/public/: orderbooks.rs  status.rs  ticker.rs  trades.rs
