[package]
name = "gmo-coin-rs"
version = "0.1.0"
authors = ["teketekere <hujikoseina@gmail.com>"]
license = "MIT"
description = "Client library for GMO Coin API."
repository = "https://github.com/teketekere/gmo-coin-rs"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
